<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ask Around</string>
    <string name="hello_world">Hello world!</string>
    <string name="pick_all_instructions">Pick all you like!</string>
    <string name="question_any">What ice cream flavor should I get?</string>
    <string name="answer_choice_1">Vanilla</string>
    <string name="answer_choice_2">Chocolate</string>
    <string name="answer_choice_3">Royal Rainbow</string>
    <string name="comment">Comment</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="skip_this_question">Skip This Question</string>
    <string name="question_comments">What bands are you listening to?</string>
    <string name="share_opinion_instructions">Share your opinion!</string>
    <string name="next_question">Next Question!</string>
    <string name="submit_question">Submit Question</string>
    <string name="question_type">"Question Type: "</string>
    <string name="comments_only">Comments only</string>
    <string name="pick_one_option">Pick one option</string>
    <string name="pick_any_option">Pick all you like</string>
    <string name="answer_choices">Answer Choices</string>
    <string name="add_answer_choice">Add a answer choice</string>
    <string name="question_active_duration">Question Active duration</string>
    <string name="one_hour">1 Hour</string>
    <string name="one_day">1 Day</string>
    <string name="one_week">1 Week</string>
    <string name="question_hint">Question</string>
    <string name="most_recent_results_text">Most Recent</string>
    <string name="most_responses_results_text">Most Responses</string>
    <string name="mine">Mine</string>
    <string name="all">All</string>
    <string name="app_title">Ask
        Around</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="register_title">Register!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_specific_results">SpecificResultsActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="title_activity_browse_results">BrowseResultsActivity</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sample_question">Sample question</string>
    <string name="three_days">3 days</string>
    <string name="_300">300</string>
    <string name="option">Option</string>
    <string name="delete">Delete</string>
    <string name="new_option">new option</string>
    <string name="delete_option">Delete option</string>
    <string name="delete_new_option_text">Are you sure you want to delete this option?</string>
    <string name="ask_question_menu_item">Ask Question</string>
    <string name="cool">Cool</string>

</resources>
