<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/question_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/question_hint"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/question_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10dp"
            android:text="@string/question_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle" >

            <Button
                android:id="@+id/comments_only_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/comments_only"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />

            <Button
                android:id="@+id/pick_one_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/pick_one_option"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />

            <Button
                android:id="@+id/pick_any_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/pick_any_option"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/answer_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10dp"
            android:text="@string/answer_choices" />

        <ListView
            android:id="@+id/answer_choices_list_view"
            android:layout_width="match_parent"
            android:layout_height="98dp" >
        </ListView>

        <Button
            android:id="@+id/add_answer_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add_answer_choice" />

        <TextView
            android:id="@+id/Question_active_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="10dp"
            android:text="@string/question_active_duration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/duration_one_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/one_hour"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />

            <Button
                android:id="@+id/duration_one_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/one_day"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />

            <Button
                android:id="@+id/duration_one_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/one_week"
                android:textColor="@color/dark_gray"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/submit_question"
        android:textColor="@color/white" />

</LinearLayout>