<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/paper_background_44_tall"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/browse_results_question_textview"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:layout_marginRight="20dp" >
        
        <TextView
        android:id="@+id/browse_results_duetime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_days" />
        
        <TextView
        android:id="@+id/browse_results_hotness_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300" />
        
    </LinearLayout>

</LinearLayout>
