<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/gray"
        android:paddingBottom="20dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:paddingTop="20dp"
        android:text="@string/pick_all_instructions"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        android:gravity="center_horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_any"
            android:textColor="@color/white" />

        <ListView
            android:id="@+id/result_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question" >

            </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        android:padding="15dp" >

        <ListView
            android:id="@+id/comments_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">
        </ListView>

    </RelativeLayout>

    <Button
        android:id="@+id/next_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/blue"
        android:text="@string/next_question"
        android:textColor="@color/white" />


</LinearLayout>